services/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: legibit
  labels:
    app: legibit
    component: redis
spec:
  type: ClusterIP
  selector:
    app: legibit
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
