services/service-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mongodb
  namespace: legibit
  labels:
    app: legibit
    component: service-mongodb
spec:
  type: ClusterIP
  selector:
    app: legibit
    component: service-mongodb
  ports:
    - name: http
      port: 8001
      targetPort: 8001
