services/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: legibit
  labels:
    app: legibit
    component: web
spec:
  type: NodePort
  selector:
    app: legibit
    component: web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080   # you can change this if you want
