services/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legibit-ingress
  namespace: legibit
  labels:
    app: legibit
spec:
  ingressClassName: traefik
  rules:
    - host: legi-bit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9000
